@@ -24,6 +24,7 @@ Improvements since 0.8.9 release are:
  * Fix parsing of lossless 16bit bitmaps, fixing support for movies
    generated by the evil TechSmit Camtasia tool (#34625).
  * Improved double buffering support for AGG in a framebuffer.
+ * Thumbnailer for SWF files and GNOME2 desktop config for it.
 
 Gnash 0.8.9
 2011/03/19
